# conducta

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conducta/core/: credentials.py  logger.py
conducta/providers/: openai.py
docs/: .gitignore  .prettierrc  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
docs/src/: app.html
docs/src/lib/components/: Nav.svelte  ThemeSwitch.svelte
docs/src/lib/stores/: ThemeStore.ts
docs/src/lib/styles/: global.css
docs/src/routes/: +layout.server.ts  +layout.svelte  +page.md  +page.svelte
examples/models/chat/: openai.py
